# texel

./: .clippy.toml  .gitignore  CHANGELOG.md  Cargo.toml  README.md
.github/workflows/: make.yml
docs/: commands.md  keymap.md  modes.md  overview.md
help/: commands.rgz  config.rgz  keys.rgz  modes.rgz  overview.rgz  tutorial.rgz
src/: common.rs  components.rs  exporters.rs  main.rs  os.rs  resources.rs  systems.rs  terminal.rs  texel_types.rs
src/common/: action.rs  clipboard.rs  common.rs  config.rs  fio.rs  help.rs  input.rs  loader.rs  mode.rs  program.rs  scene.rs  selected_info.rs  sprite.rs  texel.rs
src/components/: color.rs  dimension.rs  position.rs  sprite.rs
src/exporters/: plaintext.rs
src/os/: input_crossterm.rs  input_termion.rs  tty_crossterm.rs  tty_termion.rs
src/resources/: cmdline.rs  framebuffer.rs  loader.rs  palette.rs  state.rs  sync_term.rs
src/resources/cmdline/: auto_complete.rs
src/resources/palette/: color_palette.rs  symbol_palette.rs
src/resources/sync_term/: tty_termion.rs
src/systems/: action_handler.rs  action_handlers.rs  history_handler.rs  input_handler.rs  input_handlers.rs  renderers.rs
src/systems/action_handler/: system_data.rs
src/systems/renderers/: cmdline_renderer.rs  color_palette_renderer.rs  meta_renderer.rs  sprite_renderer.rs  subselection_renderer.rs
src/terminal/: termion.rs
src/texel_types/: dimension.rs  position.rs  scene.rs  sprite.rs  texel.rs
