[package]
name = "texel"
version = "0.2.3"
authors = ["Ales Katona <ales@katona.me>"]
edition = "2018"
description = "ASCII art text editor"
license = "GPL-3.0-or-later"
repository = "https://github.com/almindor/texel"
keywords = ["text", "ascii", "editor", "art", "ascii-art"]
readme = "README.md"
categories = ["text-editors", "multimedia::images"]

[dependencies]
big_enum_set = { version = "0.2", features = ["serde"] }
crossterm = { version = "0.20", optional = true }
dirs = "3.0"
legion = "0.4.0"
libflate = "1.0"
rand = "0.8"
ron = "0.6"
serde = "1.0"
serde_derive = "1.0"
termion = { version = "1.5", optional = true }
texel_types = { version = "2.0", features = ["serde_support"] }

[features]
default = ["crossterm"]
ion = ["termion"]
