[package]
name = "texel"
version = "0.2.5"
authors = ["Ales Katona <ales@katona.me>"]
edition = "2018"
description = "ASCII art text editor"
license = "GPL-3.0-or-later"
repository = "https://github.com/almindor/texel"
keywords = ["text", "ascii", "editor", "art", "ascii-art"]
readme = "README.md"
categories = ["text-editors", "multimedia::images"]

[dependencies]
big_enum_set = { version = "0.3", features = ["serde"] }
crossterm = { version = "0.27", optional = true }
dirs = "5.0"
legion = "0.4.0"
libflate = "2.1"
rand = "0.8"
ron = "0.8"
serde = "1.0"
serde_derive = "1.0"
termion = { version = "3.0", optional = true }
texel_types = { version = "2.0", features = ["serde_support"] }

[features]
default = ["crossterm"]
ion = ["termion"]
